--- a/module-04/index.html
+++ b/module-04/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Roboto:300,400,900" rel="stylesheet">
     <link href=".//css/style.css" rel="stylesheet">
-    <title>Document</title>
+    <title>GoIT-FS9-Module04</title>
 </head>
 <body>
+
     <header class="header">
-        <img src="./img/logo.png" alt="logo">
+        <h1><img src="./img/logo.png" alt="logo"></h1>
         <ul class="menu">
             <li class="menu-item"><a href="#" class="menu-link">home</a></li>
             <li class="menu-item"><a href="#" class="menu-link">about us</a></li>
@@ -22,13 +22,12 @@
     </header>
 
     <main class="main">
-
         <section class="products">
             <h2 class="products-title">featured products</h2>
             <ul class="product-list">
                 <li class="prod-item">
                     <a href="#" class="prod-link">
-                        <img src="./img/1.png" alt="" class="prod-img">
+                        <img src="./img/1.png" alt="Blue Tshirt" class="prod-img">
                         <p class="prod-paragraf">
                             <span class="name">blue tshirt</span>
                             <span class="price">$26</span>
@@ -37,7 +36,7 @@
                 </li>
                 <li class="prod-item">
                     <a href="#" class="prod-link">
-                        <img src="./img/2.png" alt="" class="prod-img">
+                        <img src="./img/2.png" alt="Woman shirt" class="prod-img">
                         <p class="prod-paragraf">
                             <span class="name">WOMAN shirt</span>
                             <span class="price">$31</span>
@@ -46,7 +45,7 @@
                 </li>
                 <li class="prod-item">
                     <a href="#" class="prod-link">
-                        <img src="./img/3.png" alt="" class="prod-img">
+                        <img src="./img/3.png" alt="Yellow Tshirt" class="prod-img">
                         <p class="prod-paragraf">
                             <span class="name">YELLOW Tshirt</span>
                             <span class="price">$21</span>
@@ -55,7 +54,7 @@
                 </li>
                 <li class="prod-item">
                     <a href="#" class="prod-link">
-                        <img src="./img/4.png" alt="" class="prod-img">
+                        <img src="./img/4.png" alt="Cool lingerie" class="prod-img">
                         <p class="prod-paragraf">
                             <span class="name">Cool lingerie</span>
                             <span class="price">$56</span>
@@ -64,7 +63,7 @@
                 </li>
                 <li class="prod-item">
                     <a href="#" class="prod-link">
-                        <img src="./img/5.png" alt="" class="prod-img">
+                        <img src="./img/5.png" alt="Blue Tshirt" class="prod-img">
                         <p class="prod-paragraf">
                             <span class="name">blue tshirt</span>
                             <span class="price">$26</span>
@@ -73,7 +72,7 @@
                 </li>
                 <li class="prod-item">
                     <a href="#" class="prod-link">
-                        <img src="./img/6.png" alt="" class="prod-img">
+                        <img src="./img/6.png" alt="Woman shirt" class="prod-img">
                         <p class="prod-paragraf">
                             <span class="name">WOMAN shirt</span>
                             <span class="price">$31</span>
@@ -82,7 +81,7 @@
                 </li>
                 <li class="prod-item">
                     <a href="#" class="prod-link">
-                        <img src="./img/7.png" alt="" class="prod-img">
+                        <img src="./img/7.png" alt="Yellow Tshirt" class="prod-img">
                         <p class="prod-paragraf">
                             <span class="name">YELLOW Tshirt</span>
                             <span class="price">$21</span>
@@ -91,7 +90,7 @@
                 </li>
                 <li class="prod-item">
                     <a href="#" class="prod-link">
-                        <img src="./img/8.png" alt="" class="prod-img">
+                        <img src="./img/8.png" alt="Cool lingerie" class="prod-img">
                         <p class="prod-paragraf">
                             <span class="name">Cool lingerie</span>
                             <span class="price">$56</span>
@@ -100,7 +99,6 @@
                 </li>
             </ul>
         </section>
-
         <section class="news">
             <h2 class="news-title">LATEST NEWS</h2>
             <ul class="news-list">
@@ -124,9 +122,10 @@
                 </li>
             </ul>
         </section>
-
     </main>
 
-    <footer></footer>
+    <footer>
+    </footer>
+
 </body>
 </html>
