--- a/module-04/index.html
+++ b/module-04/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header class="header">
-        <h1><img src="./img/logo.png" alt="logo"></h1>
+        <h1><a href="#"><img src="./img/logo.png" alt="logo"></a></h1>
         <ul class="menu">
             <li class="menu-item"><a href="#" class="menu-link">home</a></li>
             <li class="menu-item"><a href="#" class="menu-link">about us</a></li>
