--- a/module-06/index.html
+++ b/module-06/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700">
     <link rel="stylesheet" href="css/styles.css">
     <title>GoIT-FS9-Module06</title>
 </head>
 <body>
-    <header class="header">
+    <header class="header df-jcsb">
         <h1 class="logo">MoGo</h1>
-        <ul class="menu">
+        <ul class="menu lsn df-jcsb">
             <li class="menu-item"><a href="#" class="menu-link">about</a></li>
             <li class="menu-item"><a href="#" class="menu-link">service us</a></li>
             <li class="menu-item"><a href="#" class="menu-link">work</a></li>
@@ -19,6 +19,47 @@
             <li class="menu-item"><a href="#" class="menu-link">contact</a></li>
         </ul>
     </header>
+    <main class="main">
+        <section class="services ">
+            <h3 class="services_pre-head">We work with</h3>
+            <h2 class="services_head">Amazing Services</h2>
+            <ul class="services-list lsn df-jcsb">
+                <li class="services-list__item">
+                    <h4 class="services-list__title">Photography</h4>
+                    <p class="services-list__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                </li>
+                <li class="services-list__item">
+                    <h4 class="services-list__title">Web Design</h4>
+                    <p class="services-list__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                </li>
+                <li class="services-list__item">
+                    <h4 class="services-list__title">Creativity</h4>
+                    <p class="services-list__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                </li>
+                <li class="services-list__item">
+                    <h4 class="services-list__title">seo</h4>
+                    <p class="services-list__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                </li>
+                <li class="services-list__item">
+                    <h4 class="services-list__title">Css/Html</h4>
+                    <p class="services-list__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                </li>
+                <li class="services-list__item">
+                    <h4 class="services-list__title">digital</h4>
+                    <p class="services-list__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                </li>
+            </ul>
+        </section>
+        <section class="team">
 
+        </section>
+    </main>
+    <footer class="footer df-jcsb">
+        <p class="footer__copyright">© 2016 MoGo free PSD template by <a href="#" class="footer_tmplt-author">Laaqiq</a></p>
+        <form action="" class="footer__form">
+            <input type="email" class="footer__input-email">
+            <button class="footer__button">Subscribe</button>
+        </form>
+    </footer>
 </body>
 </html>
