add imgs to M11

--- a/module-11/src/index.html
+++ b/module-11/src/index.html
@@ -16,12 +16,12 @@
   <meta name="msapplication-TileColor" content="#000000">
   <meta name="format-detection" content="telephone=no">
 
-  <title>Placeholder title</title>
+  <title>M11</title>
   <link rel="stylesheet" href="css/styles.min.css">
 </head>
 
 <body>
-
+<img src="./images/Lake_mapourika_NZ.jpeg" alt="">
   <script src="js/scripts.min.js"></script>
 </body>
 
