--- a/class-day-20/index.html
+++ b/class-day-20/index.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <title>CW20</title>
 </head>
 <body>
-    
+    <div class="wrap">
+        <form action="" class="form">
+            <h2 class="form-title">password reset</h2>
+            <label for="" class="form-lable">email</label>
+            <input type="email" value="YOUR EMAIL" class="form-email">
+            <input type="submit" value="reset password" class="form-submit">
+            <a href="#problems" class="form-link">Other problems logging in?</a>
+        </form>
+    </div>
 </body>
 </html>
