--- a/module-06/index.html
+++ b/module-06/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300i|Kaushan+Script|Montserrat:400,700">
     <link rel="stylesheet" href="css/styles.css">
     <title>GoIT-FS9-Module06</title>
 </head>
@@ -57,8 +57,8 @@
     <footer class="footer df-jcsb">
         <p class="footer__copyright">© 2016 MoGo free PSD template by <a href="#" class="footer_tmplt-author">Laaqiq</a></p>
         <form action="" class="footer__form">
-            <input type="email" class="footer__input-email">
-            <button class="footer__button">Subscribe</button>
+            <input type="email" placeholder="Your Email..." class="footer__input-email">
+            <input type="submit" value="Subscribe" class="footer__input-subscribe">
         </form>
     </footer>
 </body>
