--- a/module-06/index.html
+++ b/module-06/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300i|Kaushan+Script|Montserrat:400,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300i,400|Kaushan+Script|Montserrat:400,700">
     <link rel="stylesheet" href="css/styles.css">
     <title>GoIT-FS9-Module06</title>
 </head>
@@ -12,53 +12,84 @@
     <header class="header df-jcsb">
         <h1 class="logo">MoGo</h1>
         <ul class="menu lsn df-jcsb">
-            <li class="menu-item"><a href="#" class="menu-link">about</a></li>
-            <li class="menu-item"><a href="#" class="menu-link">service us</a></li>
-            <li class="menu-item"><a href="#" class="menu-link">work</a></li>
-            <li class="menu-item"><a href="#" class="menu-link">blog</a></li>
-            <li class="menu-item"><a href="#" class="menu-link">contact</a></li>
+            <li class="menu-item"><a href="#" class="menu--link">about</a></li>
+            <li class="menu-item"><a href="#" class="menu--link">service us</a></li>
+            <li class="menu-item"><a href="#" class="menu--link">work</a></li>
+            <li class="menu-item"><a href="#" class="menu--link">blog</a></li>
+            <li class="menu-item"><a href="#" class="menu--link">contact</a></li>
         </ul>
     </header>
     <main class="main">
         <section class="services ">
-            <h3 class="services_pre-head">We work with</h3>
-            <h2 class="services_head">Amazing Services</h2>
-            <ul class="services-list lsn df-jcsb">
-                <li class="services-list__item">
-                    <h4 class="services-list__title">Photography</h4>
-                    <p class="services-list__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+            <h3 class="services--pre_head">We work with</h3>
+            <h2 class="services--head">Amazing Services</h2>
+            <ul class="services_list lsn df-jcsb">
+                <li class="services_list--item icon_photo df-jcsb">
+                    <div>
+                        <h4 class="services_list--title">Photography</h4>
+                        <p class="services_list--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    </div>
                 </li>
-                <li class="services-list__item">
-                    <h4 class="services-list__title">Web Design</h4>
-                    <p class="services-list__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                <li class="services_list--item icon_webdesign df-jcsb">
+                    <div>
+                        <h4 class="services_list--title">Web Design</h4>
+                        <p class="services_list--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    </div>
                 </li>
-                <li class="services-list__item">
-                    <h4 class="services-list__title">Creativity</h4>
-                    <p class="services-list__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                <li class="services_list--item icon_creativity df-jcsb">
+                    <div>
+                        <h4 class="services_list--title">Creativity</h4>
+                        <p class="services_list--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    </div>
                 </li>
-                <li class="services-list__item">
-                    <h4 class="services-list__title">seo</h4>
-                    <p class="services-list__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                <li class="services_list--item icon_seo df-jcsb">
+                    <div>
+                        <h4 class="services_list--title">seo</h4>
+                        <p class="services_list--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    </div>
                 </li>
-                <li class="services-list__item">
-                    <h4 class="services-list__title">Css/Html</h4>
-                    <p class="services-list__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                <li class="services_list--item icon_csshtml df-jcsb">
+                    <div>
+                        <h4 class="services_list--title">Css/Html</h4>
+                        <p class="services_list--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    </div>
                 </li>
-                <li class="services-list__item">
-                    <h4 class="services-list__title">digital</h4>
-                    <p class="services-list__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                <li class="services_list--item icon_digital df-jcsb">
+                    <div>
+                        <h4 class="services_list--title">digital</h4>
+                        <p class="services_list--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    </div>
                 </li>
             </ul>
         </section>
         <section class="team">
-
+                <h3 class="team--pre_head">Who we are</h3>
+                <h2 class="team--head">meet our team</h2>
+                <p class="team--paragpaph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                <ul class="team_list">
+                    <li class="team_list--member">
+                        <img src="" alt="" class="team_list--picture">
+                        <h3 class="team_list--name"></h3>
+                        <p class="team_list--position"></p>
+                    </li>
+                    <li class="team_list--member">
+                        <img src="" alt="" class="team_list--picture">
+                        <h3 class="team_list--name"></h3>
+                        <p class="team_list--position"></p>
+                    </li>
+                    <li class="team_list--member">
+                        <img src="" alt="" class="team_list--picture">
+                        <h3 class="team_list--name"></h3>
+                        <p class="team_list--position"></p>
+                    </li>
+                </ul>
         </section>
     </main>
     <footer class="footer df-jcsb">
-        <p class="footer__copyright">© 2016 MoGo free PSD template by <a href="#" class="footer_tmplt-author">Laaqiq</a></p>
-        <form action="" class="footer__form">
-            <input type="email" placeholder="Your Email..." class="footer__input-email">
-            <input type="submit" value="Subscribe" class="footer__input-subscribe">
+        <p class="footer--copyright">© 2016 MoGo free PSD template by <a href="#" class="footer--tmplt_author">Laaqiq</a></p>
+        <form action="" class="footer--form">
+            <input type="email" placeholder="Your Email..." class="footer--input_email">
+            <input type="submit" value="Subscribe" class="footer--input_subscribe">
         </form>
     </footer>
 </body>
