--- a/module-06/index.html
+++ b/module-06/index.html
@@ -66,21 +66,21 @@
                 <h3 class="team--pre_head">Who we are</h3>
                 <h2 class="team--head">meet our team</h2>
                 <p class="team--paragpaph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-                <ul class="team_list">
+                <ul class="team_list lsn df-jcsb">
                     <li class="team_list--member">
-                        <img src="" alt="" class="team_list--picture">
-                        <h3 class="team_list--name"></h3>
-                        <p class="team_list--position"></p>
+                        <img src="./img/teammember1@1X.png" alt="" class="team_list--picture">
+                        <h3 class="team_list--name">Matthew Dix</h3>
+                        <p class="team_list--position">Graphic Design</p>
                     </li>
                     <li class="team_list--member">
-                        <img src="" alt="" class="team_list--picture">
-                        <h3 class="team_list--name"></h3>
-                        <p class="team_list--position"></p>
+                        <img src="./img/teammember2@1X.png" alt="" class="team_list--picture">
+                        <h3 class="team_list--name">Christopher Campbell</h3>
+                        <p class="team_list--position">Branding/UX design</p>
                     </li>
                     <li class="team_list--member">
-                        <img src="" alt="" class="team_list--picture">
-                        <h3 class="team_list--name"></h3>
-                        <p class="team_list--position"></p>
+                        <img src="./img/teammember3@1X.png" alt="" class="team_list--picture">
+                        <h3 class="team_list--name">Michael Fertig </h3>
+                        <p class="team_list--position">Developer</p>
                     </li>
                 </ul>
         </section>
