--- a/module-06/index.html
+++ b/module-06/index.html
@@ -68,18 +68,48 @@
                 <p class="team--paragpaph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
                 <ul class="team_list lsn df-jcsb">
                     <li class="team_list--member">
-                        <img src="./img/teammember1@1X.png" alt="" class="team_list--picture">
+                        <div class="team_list--picture_back">
+                            <div class="team_list--picture">
+                                <img src="./img/teammember1@1X.png" alt="picture of Matthew Dix" width="383" height="472" class="team_list--picture_card">
+                                <div class="social_buttons">
+                                    <button class="social_buttons--icon facebook"></button>
+                                    <button class="social_buttons--icon twitter"></button>
+                                    <button class="social_buttons--icon pinterest"></button>
+                                    <button class="social_buttons--icon instagram"></button>
+                                </div>
+                            </div>      
+                        </div>
                         <h3 class="team_list--name">Matthew Dix</h3>
                         <p class="team_list--position">Graphic Design</p>
                     </li>
                     <li class="team_list--member">
-                        <img src="./img/teammember2@1X.png" alt="" class="team_list--picture">
+                        <div class="team_list--picture_back">
+                            <div class="team_list--picture">
+                                <img src="./img/teammember2@1X.png" alt="picture of Christopher Campbell" width="383" height="472" class="team_list--picture_card">
+                                <div class="social_buttons">
+                                    <button class="social_buttons--icon facebook"></button>
+                                    <button class="social_buttons--icon twitter"></button>
+                                    <button class="social_buttons--icon pinterest"></button>
+                                    <button class="social_buttons--icon instagram"></button>
+                                </div>
+                            </div>      
+                        </div>
                         <h3 class="team_list--name">Christopher Campbell</h3>
                         <p class="team_list--position">Branding/UX design</p>
                     </li>
                     <li class="team_list--member">
-                        <img src="./img/teammember3@1X.png" alt="" class="team_list--picture">
-                        <h3 class="team_list--name">Michael Fertig </h3>
+                        <div class="team_list--picture_back">
+                            <div class="team_list--picture">
+                                <img src="./img/teammember3@1X.png" alt="picture of Michael Fertig" width="383" height="472" class="team_list--picture_card">
+                                <div class="social_buttons">
+                                    <button class="social_buttons--icon facebook"></button>
+                                    <button class="social_buttons--icon twitter"></button>
+                                    <button class="social_buttons--icon pinterest"></button>
+                                    <button class="social_buttons--icon instagram"></button>
+                                </div>
+                            </div>      
+                        </div>
+                        <h3 class="team_list--name">Michael Fertig</h3>
                         <p class="team_list--position">Developer</p>
                     </li>
                 </ul>
@@ -87,7 +117,7 @@
     </main>
     <footer class="footer df-jcsb">
         <p class="footer--copyright">© 2016 MoGo free PSD template by <a href="#" class="footer--tmplt_author">Laaqiq</a></p>
-        <form action="" class="footer--form">
+        <form class="footer--form">
             <input type="email" placeholder="Your Email..." class="footer--input_email">
             <input type="submit" value="Subscribe" class="footer--input_subscribe">
         </form>
