Preparing materials for M07

--- a/module-07/module-07-task-01/index.html
+++ b/module-07/module-07-task-01/index.html
@@ -1,13 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <title>Module_07.Task_01</title>
 </head>
 <body>
-    
+    <table>
+        <caption>Услуги барбершопа "Branch"</caption>
+        <tr>
+            <th>Услуга</th>
+            <th>Стоимость</th>
+            <th>Сроки</th>
+        </tr>
+        <tr>
+            <td class="col1">мужская стрижка</td>
+            <td class="col2">250 грн</td>
+            <td class="col3">1 час</td>
+        </tr>
+        <tr>
+            <td class="col1">женская стрижка</td>
+            <td class="col2">350 грн</td>
+            <td class="col3">2 часа</td>
+        </tr>
+        <tr>
+            <td class="col1">стрижка + борода</td>
+            <td class="col2">350 грн</td>
+            <td class="col3">1.5 часа</td>
+        </tr>
+        <tr>
+            <td class="col1">коррекция стрижки</td>
+            <td class="col2">170 грн</td>
+            <td class="col3">1 час</td>
+        </tr>
+        <tr>
+            <td class="col1">стрижка бороды</td>
+            <td class="col2">150 грн</td>
+            <td class="col3">1 час</td>
+        </tr>
+        <tr>
+            <td class="col1">чёрная маска</td>
+            <td class="col2">150 грн</td>
+            <td class="col3">0.5 часа</td>
+        </tr>
+</table>
 </body>
 </html>
