--- a/module-07/index.html
+++ b/module-07/index.html
@@ -5,9 +5,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <title>GoIT-FS9-Module07</title>
 </head>
 <body>
-    
+    <div class="wrapper_white">
+        <header class="header df_jcsb">
+            <h1><img src="./img/Logo-Treehouse@1X.png" alt="" class="header_logo"></h1>
+            <nav class="nav">
+                <ul class="nav_list lsn df_jcsb">
+                    <li class="nav_list--item">
+                        <a href="">Home</a>
+                    </li>
+                    <li class="nav_list--item">
+                        <a href="">Services</a>
+                    </li>
+                    <li class="nav_list--item">
+                        <a href="">Portfolio</a>
+                    </li>
+                    <li class="nav_list--item">
+                        <a href="">About</a>
+                    </li>
+                    <li class="nav_list--item">
+                        <a href="">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <section class="services">
+            <h2 class="services--tittle">Services</h2>
+            <p class="services--subtitle">Proin iaculis purus consequat sem cure. </p>
+            <ul class="services_list lsn df_jcsb">
+                <li class="services_list--item">
+                    <img src="" alt="" class="services_list--item_pic">
+                    <h3 class="services_list--item_title">E-Commerce</h3>
+                    <p class="services_list--item_text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
+                </li>
+                <li class="services_list--item">
+                    <img src="" alt="" class="services_list--item_pic">
+                    <h3 class="services_list--item_title">Responsive Web</h3>
+                    <p class="services_list--item_text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
+                </li>
+                <li class="services_list--item">
+                    <img src="" alt="" class="services_list--item_pic">
+                    <h3 class="services_list--item_title">Web Security</h3>
+                    <p class="services_list--item_text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
+                </li>
+            </ul>
+        </section>
+    </div>
+    <div class="wrapper_gray">
+        <section class="contact">
+            <h2 class="services--tittle">Contact us</h2>
+            <p class="services--subtitle">Proin iaculis purus consequat sem cure. </p>
+            <form action="#" method="post">
+                <input type="text" name="" id="" placeholder="YOUR NAME" required>
+                <input type="email" name="" id="" placeholder="YOUR E-MAIL" required>
+                <input type="text" name="" id="" placeholder="SUBJECT">
+                <textarea name="" id="" cols="30" rows="10" placeholder="YOUR MESSAGE" required></textarea>
+            </form>
+        </section>
+    </div>
 </body>
 </html>
