--- a/module-07/index.html
+++ b/module-07/index.html
@@ -59,7 +59,7 @@
             </ul>
         </section>
     </div>
-    <div class="wrapper_gray">
+    <div class="wrapper_gray wrapper_gray--bgi">
         <section class="contact">
             <h2 class="contact--tittle">Contact us</h2>
             <p class="contact--subtitle">Proin iaculis purus consequat sem cure. </p>
@@ -70,7 +70,7 @@
                     <input type="text" name="" class="contact_form--subject form_item-global_style" id="" placeholder="SUBJECT">
                     <textarea name="" class="form_item-global_style" id="" cols="30" rows="10" placeholder="YOUR MESSAGE" required></textarea>
                 </div>
-                <input type="submit" value="Send Message">
+                <input type="submit" value="Send Message" class="contact_form--submit">
             </form>
         </section>
     </div>
