--- a/JS/CW/class_work-20190128/index.html
+++ b/JS/CW/class_work-20190128/index.html
@@ -8,7 +8,7 @@
     <title>BC9-JS-CW-2019/01/28</title>
 </head>
 <body>
-    
+ <div class="root"></div>   
     <script src="./js/index.js"></script>
 </body>
 </html>
