--- a/JS/CW/class_work-20190129/index.html
+++ b/JS/CW/class_work-20190129/index.html
@@ -8,7 +8,17 @@
     <title>BC9-JS-CW-2019/01/29</title>
 </head>
 <body>
- <div class="root"></div>   
+    <div class="container">
+        <h2 class="title">Скільки коштує мясо на шашлики?</h2>
+        <form action="#" class="form">
+            <label for="price">Ціна грн</label>
+            <input type="text" id="price" name="price" value="0">
+            <label for="quantity">Кількість<span class="amount">1</span>кг </label>
+            <input type="range" id="quantity" name="quantity" value="1" min="1", max="20">
+        </form>
+        <p class="text-right total"></p>
+    </div>
+    
     <script src="./js/index.js"></script>
 </body>
 </html>
