--- a/JS/CW/class_work-20190130/index.html
+++ b/JS/CW/class_work-20190130/index.html
@@ -8,7 +8,9 @@
     <title>BC9-JS-CW-2019/01/30</title>
 </head>
 <body>
-   
+   <div id="gallary">
+
+   </div>
     <script src="./js/index.js"></script>
 </body>
 </html>
