--- a/JS/CW/class_work-20190131/index.html
+++ b/JS/CW/class_work-20190131/index.html
@@ -40,7 +40,7 @@
         </div>
         <!-- end div.wrapper -->
     </section>
-
+    <footer>Written by Illia Rohovoi</footer>
     <script src="./js/index.js"></script>
 
 </body>
