--- a/JS/Modules/module-07/Tasks/01/index.html
+++ b/JS/Modules/module-07/Tasks/01/index.html
@@ -7,7 +7,35 @@
     <title>BC9-JS-M07-T01</title>
 </head>
 <body>
-   
+    <ul class="categories">
+        <li>
+          Животные
+          <ul>
+            <li>Кот</li>
+            <li>Хомяк</li>
+            <li>Лошадь</li>
+            <li>Попугай</li>
+          </ul>
+        </li>
+        <li>
+          Продукты
+          <ul>
+            <li>Хлеб</li>
+            <li>Зелень</li>
+            <li>Творог</li>
+          </ul>
+        </li>
+        <li>
+          Технологии
+          <ul>
+            <li>html</li>
+            <li>css</li>
+            <li>js</li>
+            <li>react</li>
+            <li>node</li>
+          </ul>
+        </li>
+      </ul>
     <script src="./js/index.js"></script>
 </body>
 </html>
