--- a/JS/Modules/module-07/index.html
+++ b/JS/Modules/module-07/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./css/main.css">
     <title>BC9-JS-M07_@iRoy</title>
 </head>
 <body>
-   
+    <div id="root"></div>
     <script src="./js/index.js"></script>
 </body>
 </html>
