--- a/JS/CW/class_work-20190204/index.html
+++ b/JS/CW/class_work-20190204/index.html
@@ -8,6 +8,26 @@
     <title>BC9-JS-CW-2019/02/04</title>
 </head>
 <body>
+    <!--Header start-->
+    <header id="header">
+        <h1><a href="#">Photo Gallery</a></h1>
+    </header>
+    
+    <form class="box">
+        <input type="text" class="input" autofocus>
+        <input type="submit" class="btn" value="SUBMIT">
+    </form>
+    <!--Header end-->
+
+    <!--Start of Gallery-->
+    <div id="container"></div>
+    <!--Photo gallery end-->
+
+    <!--Footer start-->
+    <footer>
+        <h2>-Photo Gallery-</h2>
+    </footer>
+
     <script src="./js/index.js"></script>
 </body>
 </html>
