--- a/JS/Modules/module-08/Tasks/03/index.html
+++ b/JS/Modules/module-08/Tasks/03/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <button class="btn" data-action="sub">-1</button>
-  <span class="value">0</span>
+  <span class="value"></span>
   <button class="btn" data-action="add">+1</button>
   <script src="./js/index.js"></script>
 </body>
