--- a/JS/CW/class_work-20190206/index.html
+++ b/JS/CW/class_work-20190206/index.html
@@ -8,6 +8,11 @@
     <title>BC9-JS-CW-2019/02/06</title>
 </head>
 <body>
+    <div class="root">
+        <p>Ukrainian TOP chart</p>
+        <div class="tracks">
+        </div>
+    </div>
     <script src="./js/index.js"></script>
 </body>
 </html>
