--- a/JS/CW/class_work-20190206/index.html
+++ b/JS/CW/class_work-20190206/index.html
@@ -13,6 +13,8 @@
         <div class="tracks">
         </div>
     </div>
+        <iframe src={`https://www.youtube.com/embed/${videoID}?autoplay=1`} frameBorder="0" allow="autoplay; encrypted-media" allowFullScreen>
+        </iframe>
     <script src="./js/index.js"></script>
 </body>
 </html>
