--- a/JS/CW/class_work-20190207/Tasks/TemplatePractice/index.html
+++ b/JS/CW/class_work-20190207/Tasks/TemplatePractice/index.html
@@ -5,31 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/main.css">
-    <title>BC9-JS-CW-2019/02/07</title>
+    <title>TemplatePractice</title>
 </head>
 <body>
-    <div class="content-placeholder"></div>
-    
-<!-- Шаблон для вставки списка типа "имя + фамилия" -->
-    <template id="example-template">
-        <ul>
-            {{#each people}}
-            <li>{{firstName}} {{lastName}}</li>
-            {{/each}}
-        </ul>
-    </template>
+    <h2 class="gallery-title">Gallery</h2>
+    <div class="gallery-content"></div>
 
-<!-- Шаблон для вставки списка навыков -->
-    <template id="example-temp">
-        <ul>
-            {{#each temp}}
-            <li>{{this}}</li>
-            {{/each}}
-        </ul>
+    <!-- Шаблон -->
+    <template id="template">
+        {{#each items}}
+        <div class="gallery-item">
+            <img class="gallery-img" src={{img}} alt={{text}}>
+            <p class="gallery-text">{{text}}</p>
+        </div>
+        {{/each}}
     </template>
-
+    <!-- End of template -->
     
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
-    <script src="./js/index.js" style="h"></script>
+    <script src="./js/handlebars.min.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
