--- a/JS/Modules/module-08/index.html
+++ b/JS/Modules/module-08/index.html
@@ -8,8 +8,7 @@
     <title>BC9-JS-M07_@iRoy</title>
 </head>
 <body>
-    <div class="image-gallery js-image-gallery">
-    </div>
+    <div class="image-gallery js-image-gallery"></div>
     <script src="./js/index.js"></script>
 </body>
 </html>
