--- a/JS/Modules/module-09/index.html
+++ b/JS/Modules/module-09/index.html
@@ -8,7 +8,13 @@
     <title>BC9-JS-M07_@iRoy</title>
 </head>
 <body>
-    <div class="image-gallery js-image-gallery"></div>
+    <div class="stopwatch">
+        <p class="time js-time">00:00.0</p>
+        <button class="btn js-start">Start</button>
+        <button class="btn js-take-lap">Lap</button>
+        <button class="btn js-reset">Reset</button>
+    </div>
+    <ul class="laps js-laps"></ul>
     <script src="./js/index.js"></script>
 </body>
 </html>
