--- a/JS/Modules/module-10/Tasks/01/index.html
+++ b/JS/Modules/module-10/Tasks/01/index.html
@@ -13,7 +13,8 @@
       <input type="text" name="country" placeholder="Enter country name">
       <button class="mdc-btn" type="submit">search</button>
     </form>
-  <div class="result"></div>
-  </div>  <script src="./js/index.js"></script>
+    <div class="result"></div>
+  </div>
+  <script src="./js/index.js"></script>
 </body>
 </html>
