--- a/JS/Modules/module-10/Tasks/03/index.html
+++ b/JS/Modules/module-10/Tasks/03/index.html
@@ -12,7 +12,9 @@
     <form class="search-form">
       <button class="mdc-btn" type="submit">get</button>
     </form>
-    <table class="user-table"></table>
+    <table class="users-table">
+
+    </table>
   </div>
   <script src="./js/index.js"></script>
 </body>
