--- a/JS/Modules/module-10/index.html
+++ b/JS/Modules/module-10/index.html
@@ -8,7 +8,17 @@
   <title>BC9-JS-M10_@iRoy</title>
 </head>
 <body>
-    
+  <div class="container">
+    <form class="search-form">
+      <input type="text" placeholder="Enter here something">
+      <button class="mdc-btn" name="post" type="submit">post</button>
+      <button class="mdc-btn" name="get" type="submit">get</button>
+    </form>
+    <table class="users-table">
+
+    </table>
+  </div>
+        
   <script src="./js/index.js"></script>
 </body>
 </html>
