--- a/JS/CW/class_work-20190214-M14-Tests/Tasks/100Zero/index.html
+++ b/JS/CW/class_work-20190214-M14-Tests/Tasks/100Zero/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div id="output"></div>
-    <button id="add-elemant"></button>
+    <button id="add-elemant">ADD</button>
+    <button id="stop">STOP</button>
     <script src="./js/index.js"></script>
 </body>
 </html>
