--- a/JS/CW/class_work-20190215/SelfTasks/1RandomeNumber/index.html
+++ b/JS/CW/class_work-20190215/SelfTasks/1RandomeNumber/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="root">
         <p class="number">0</p>
-        <button class="buttonStop">START</button>
+        <button class="button">START</button>
     </div>
     <script src="./JS/random.js"></script>
 </body>
