--- a/JS/Modules/module-11/Tasks/01/index.html
+++ b/JS/Modules/module-11/Tasks/01/index.html
@@ -12,9 +12,9 @@
 
     <template id="temp">
       <ul>
-        {{#each items}}
+        {{#each fruits}}
         <li>
-          <span class="name">Name: {{name}}</span>
+          <span class="name">Name: {{name}}</span><br>
           <span class="count">Count: {{count}}</span>
         </li>
         {{/each}}
