--- a/JS/CW/class_work-20190207/index.html
+++ b/JS/CW/class_work-20190207/index.html
@@ -30,6 +30,6 @@
 
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
-    <script src="./js/index.js" style="h"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
