--- a/JS/Modules/module-10/index.html
+++ b/JS/Modules/module-10/index.html
@@ -10,11 +10,75 @@
 <body>
   <div class="container">
     <form class="search-form">
-      <input type="text" placeholder="Enter here something">
-      <button class="mdc-btn" name="post" type="submit">post</button>
-      <button class="mdc-btn" name="get" type="submit">get</button>
+      <input type="text" placeholder="Enter name" style="width: 214px;" id="name" hidden="hidden">
+      <input type="text" placeholder="Enter user ID" style="width: 214px;" id="id">
+      <input type="number" placeholder="Enter age" min="14" max="200" style="width: 94px;" id="age">
+      <br>
+      <button class="mdc-btn" name="post" type="submit" id='add'>add new user</button>
+      <button class="mdc-btn" name="get" type="submit" id='find'>find user by ID</button>
+      <button class="mdc-btn" name="get" type="submit"id='get'>show all users</button>
     </form>
     <table class="users-table">
+      <tr>
+        <th>Name</th>
+        <th>Age</th>
+        <th>ID</th>
+        <th></th>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
     </table>
   </div>
   <script src="./js/index.js"></script>
