--- a/JS/Modules/module-10/index.html
+++ b/JS/Modules/module-10/index.html
@@ -10,9 +10,9 @@
 <body>
   <div class="container">
     <form class="search-form">
-      <input type="text" placeholder="Enter name" style="width: 214px;" id="name" hidden="hidden">
-      <input type="text" placeholder="Enter user ID" style="width: 214px;" id="id">
-      <input type="number" placeholder="Enter age" min="14" max="200" style="width: 94px;" id="age">
+      <input type="text" placeholder="Enter name" style="width: 214px;" id="name" hidden>
+      <input type="text" placeholder="Enter user ID" style="width: 214px;" id="id" hidden>
+      <input type="number" placeholder="Enter age" min="14" max="200" style="width: 94px;" id="age" hidden>
       <br>
       <button class="mdc-btn" name="post" type="submit" id='add'>add new user</button>
       <button class="mdc-btn" name="get" type="submit" id='find'>find user by ID</button>
@@ -82,5 +82,6 @@
     </table>
   </div>
   <script src="./js/index.js"></script>
+
 </body>
 </html>
