--- a/JS/Modules/module-10/index.html
+++ b/JS/Modules/module-10/index.html
@@ -10,13 +10,15 @@
 <body>
   <div class="container">
     <form class="search-form">
-      <div style=' visibility: hidden;'></div>
-      <input type="text" placeholder="Enter name" style="width: 214px;" id="name" hidden required>
-      <input type="text" placeholder="Enter user ID" style="width: 214px;" id="id" hidden required>
-      <input type="number" placeholder="Enter age" min="14" max="200" style="width: 94px;" id="age" hidden required>
-      <div>
+      <div class="input-conteiner">
+        <input type="text" placeholder="Enter user ID" style="width: 240px;" id="id" hidden required>
+        <input type="text" placeholder="Enter name" style="width: 200px;" id="name" hidden required>
+        <input type="number" placeholder="Enter age" min="14" max="200" style="width: 100px;" id="age" hidden required>
+      </div>
+      <div class="button-conteiner">
         <button class="mdc-btn" name="post" type="submit" id='add'>add new user</button>
         <button class="mdc-btn" name="get" type="submit" id='find'>find user by ID</button>
+        <button class="mdc-btn" name="get" type="submit"id='update'>updaTe user info</button>
         <button class="mdc-btn" name="get" type="submit"id='get'>show all users</button>
       </div>
     </form>
@@ -26,54 +28,6 @@
         <th>Age</th>
         <th>ID</th>
         <th></th>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
       </tr>
       <tr>
         <td></td>
