--- a/JS/Modules/module-11/index.html
+++ b/JS/Modules/module-11/index.html
@@ -8,6 +8,54 @@
   <title>BC9-JS-M11_@iRoy</title>
 </head>
 <body>
+  <form class="form js-form">
+    <section>
+      <h2>Screen size</h2>
+      <ul>
+        <li><label><input type="checkbox" name="size" value="13"> 13"</label></li>
+        <li><label><input type="checkbox" name="size" value="15"> 15"</label></li>
+        <li><label><input type="checkbox" name="size" value="17"> 17"</label></li>
+      </ul>
+    </section>
+    <section>
+      <h2>Color</h2>
+      <ul>
+        <li><label><input type="checkbox" name="color" value="white"> white</label></li>
+        <li><label><input type="checkbox" name="color" value="gray"> gray</label></li>
+        <li><label><input type="checkbox" name="color" value="black"> black</label></li>
+      </ul>
+    </section>
+    <section>
+      <h2>Release date</h2>
+      <ul>
+        <li><label><input type="checkbox" name="release_date" value="2015"> 2015</label></li>
+        <li><label><input type="checkbox" name="release_date" value="2016"> 2016</label></li>
+        <li><label><input type="checkbox" name="release_date" value="2017"> 2017</label></li>
+      </ul>
+    </section>
+    <button type="submit">Filter</button>
+    <button type="reset">Clear</button>
+  </form>
+
+  <div class="content-placeholder"></div>
+
+  <!-- Шаблон для вставки списка навыков -->
+  <template id="template">
+      <ul>
+          {{#each}}
+          <li>
+            <h2>{{name}}</h2>
+            <img src={{img}} alt="">
+            <p>{{descr}}</p>
+            <p>{{color}}</p>
+            <p>{{price}}</p>
+            <p>{{release_date}}</p>
+          </li>
+          {{/each}}
+      </ul>
+  </template>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
   <script src="./js/index.js"></script>
 </body>
 </html>
